# matrix-permanent

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  Makefile  README.md  example.py  find_boundary.py  generate_permanent.py  opt_algorithm_visualization.py  permanent_solver.c  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  default.yml  pre_commit_prep.yml  publish_pypi.yml  pull_request.yml  pull_request_build.yml
docs/: CNAME  Makefile  Notes.md  main.bib  main.tex  requirements.txt
docs/source/: api.rst  conf.py  index.rst  install.rst
include/: permanent.h
include/permanent/: combinatoric.h  common.h  complex.h  glynn.h  kperm-gray.h  opt.h  perm-mv0.h  permanent.h  ryser.h  swap.h  tables.h  tuning.default.h
include/permanent/fxt/: kperm-gray.h  perm-mv0.h
notes/: main.bib
old_docs/: Makefile  main.tex
permanent/: __init__.py  binom.h  binomial.h  permanent.c  permanent.h  py_permanent.c  run_tuning.c
permanent/test/: test_permanent.py
pure_c_implementation/: Makefile  fast_permanent.csv  fastest_permanent_plotter.py  matrix_dimensions.csv  permanent_solver.c
src/: common.h  complex.h  kperm-gray.h  main.cc  perm-mv0.h  permanent.cc  permanent.h  py_permanent.cc  svm.cpp  svm.h  tables.h  tuning.cc  tuning.py
tests/: test_permanent.py
tools/: binom_h.py  generate_tuning_header.py  tuning.py
